fixed scrollbar on chrome

--- a/portfolio-website/src/App.css
+++ b/portfolio-website/src/App.css
@@ -1,3 +1,11 @@
+*{
+  -ms-overflow-style: none;
+}
+
+::-webkit-scrollbar {
+  display: none;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
